# python-deps

./: .gitignore  setup.py
pdm/: pyproject.toml
poetry/: pyproject.toml
pyprojecttoml/: pyproject.toml
requirements/: deps.txt  requirements.txt
requirements/manifests/: base.txt  sub-requirements.txt
setupcfg/: setup.cfg  setup.py
