[tool.black]
line-length = 100
skip-string-normalization = true
target_version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.circleci
    | \.cache
    | _build
    | buck-out
    | build
    | dist
    | scripts
    | conf
    | docs
    | frontend
  )/
  | \.bash_history$
  | \.eslintrc$
  | \.flake8$
  | Brewfile$
  | Pipfile$
  | Pipfile\.lock$
  | Dockerfile$
  | Makefile$
  | \.dockerignore
  | .*/__pycache__/*
  | .*/migrations/.*\.py
  | \.md$
  | \.ipynb$
  | \.json$
  | \.js$
  | \.yml$
  | \.yaml$
  | \.toml$
  | \.ini$
  | \.txt$
)
'''

[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.python.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "requests-mock",
    "pytest>=7.4.0",
]

[project]
name = "pdm-package"
version = "1.0.0"
authors = [
    {name = "endor-oss", email = "oss@endor.ai"},
]
dependencies = [
    "urllib3>=1.26.5",
    "pyyaml>=4.21b",
    "jira<4,>=3.1.1",
    "tqdm>=4.66.2",
    "stashy",
    "dateparser",
    "jsonstreams",
    "psutil",
    "python-gitlab",
    "pre-commit",
    "black~=19.10b0",
    "click~=8.0.4",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "jf-ingest==0.0.98",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
